--- a/style.css
+++ b/style.css
@@ -4,3 +4,16 @@ body {
     background-size: cover;
     background-attachment: fixed;
   }
+
+  .green {
+    background-color: green;
+  }
+
+  .yellow {
+    background-color: yellow;
+  }
+
+  .red {
+    background-color: red;
+  }
+    
